create basic JSX and CSS outline

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,11 @@
 .App {
+  box-sizing: border-box;
   text-align: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+}
+
+.App-header {
+  color: #CC1244
 }
